--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -183,9 +183,9 @@
     <Compile Include="MVVM\ViewModel.cs" />
     <Compile Include="TextEditor\BreakPointMargin.cs" />
     <Compile Include="TextEditor\LineNumberMargin.cs" />
-    <Compile Include="TextEditor\Margin.cs" />
     <Compile Include="TextEditor\SyntaxHighlightingData.cs" />
     <Compile Include="TextEditor\TextEditor.cs" />
+    <Compile Include="TextEditor\TextEditorMargin.cs" />
     <Compile Include="TextEditor\TextEditorStyle.cs" />
     <Compile Include="TextEditor\TextView.cs" />
     <Compile Include="Workspace.cs" />
