--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="LanguageServices\CodeCompletionData.cs" />
     <Compile Include="LanguageServices\CPlusPlus\CPlusPlusLanguageService.cs" />
-    <Compile Include="LanguageServices\LanguageService.cs" />
+    <Compile Include="LanguageServices\ILanguageService.cs" />
     <Compile Include="Platform\Platform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\BitThunderApplicationProject.cs" />
