--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.22.0-pre20151003111314" targetFramework="net45" />
-  <package id="LibGit2Sharp.NativeBinaries" version="1.0.86" targetFramework="net45" />
-  <package id="Perspex" version="9999.0.620-nightly" targetFramework="net45" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
+  <package id="LibGit2Sharp" version="0.22.0-pre20151023210959" targetFramework="net452" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.106" targetFramework="net452" />
+  <package id="Perspex" version="9999.0.865-nightly" targetFramework="net452" />
+  <package id="Perspex.Desktop" version="9999.0.865-nightly" targetFramework="net452" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
-  <package id="Serilog" version="1.5.9" targetFramework="net45" />
-  <package id="Splat" version="1.6.2" targetFramework="net45" />
-  <package id="Sprache" version="2.0.0.47" targetFramework="net45" />
+  <package id="Serilog" version="1.5.9" targetFramework="net452" />
+  <package id="SharpDX" version="2.6.3" targetFramework="net452" />
+  <package id="SharpDX.Direct2D1" version="2.6.3" targetFramework="net452" />
+  <package id="SharpDX.DXGI" version="2.6.3" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="Sprache" version="2.0.0.47" targetFramework="net452" />
 </packages>
