--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -153,7 +153,11 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="libclang.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\nclang\NClang\NClang.csproj">
       <Project>{5AE560F9-0E8E-488E-B6C4-3C8196F9013A}</Project>
