--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -55,6 +55,7 @@
     <Compile Include="LanguageServices\CPlusPlus\CPlusPlusLanguageService.cs" />
     <Compile Include="LanguageServices\ILanguageService.cs" />
     <Compile Include="LanguageServices\SyntaxHighlightingData.cs" />
+    <Compile Include="LanguageServices\UnsavedFile.cs" />
     <Compile Include="Platform\Platform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\BitThunderApplicationProject.cs" />
