added hacked together "TextMarker sevice" which is ready to be refactored and implemented correctly.
Contains useful optimizations for syntax highlighting.

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -279,6 +279,7 @@
     <Compile Include="TextEditor\Rendering\IDocumentLineTransformer.cs" />
     <Compile Include="TextEditor\Rendering\SelectedLineBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\TextColoringTransformer.cs" />
+    <Compile Include="TextEditor\Rendering\TextMarkerService.cs" />
     <Compile Include="TextEditor\Rendering\TextTransformation.cs" />
     <Compile Include="TextEditor\Rendering\VisualLineGeometryBuilder.cs" />
     <Compile Include="TextEditor\TextEditor.cs" />
