--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -246,6 +246,7 @@
     <Compile Include="TextEditor\Rendering\ColumnLimitBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\IBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\IDocumentLineTransformer.cs" />
+    <Compile Include="TextEditor\Rendering\PragmaMarkTextLineTransformer.cs" />
     <Compile Include="TextEditor\Rendering\SelectedLineBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\SelectionBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\TextColoringTransformer.cs" />
