Added line transformers for #defines and #includes and updated pragma mark. Updated text highlighting. Some minor fixes.

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -244,8 +244,10 @@
     <Compile Include="TextEditor\Document\WeakLineTracker.cs" />
     <Compile Include="TextEditor\LineNumberMargin.cs" />
     <Compile Include="TextEditor\Rendering\ColumnLimitBackgroundRenderer.cs" />
+    <Compile Include="TextEditor\Rendering\DefineTextLineTransformer.cs" />
     <Compile Include="TextEditor\Rendering\IBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\IDocumentLineTransformer.cs" />
+    <Compile Include="TextEditor\Rendering\IncludeTextLineTransformer.cs" />
     <Compile Include="TextEditor\Rendering\PragmaMarkTextLineTransformer.cs" />
     <Compile Include="TextEditor\Rendering\SelectedLineBackgroundRenderer.cs" />
     <Compile Include="TextEditor\Rendering\SelectedWordTextLineTransformer.cs" />
