--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "AvalonStudio/nclang"]
-	path = AvalonStudio/nclang
-	url = https://github.com/atsushieno/nclang.git
 [submodule "MIEngine"]
 	path = MIEngine
 	url = https://github.com/VitalElement/MIEngine.git
+[submodule "nclang"]
+	path = nclang
+	url = https://github.com/VitalElement/nclang.git
