--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -162,8 +162,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\nclang\NClang\NClang.csproj">
-      <Project>{5AE560F9-0E8E-488E-B6C4-3C8196F9013A}</Project>
+    <ProjectReference Include="..\..\nclang\NClang\NClang.csproj">
+      <Project>{5ae560f9-0e8e-488e-b6c4-3c8196f9013a}</Project>
       <Name>NClang</Name>
     </ProjectReference>
   </ItemGroup>
