--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -327,13 +327,13 @@
     <EmbeddedResource Include="TextEditor\TextEditorTheme.paml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\nclang\NClang\NClang.csproj">
+      <Project>{5ae560f9-0e8e-488e-b6c4-3c8196f9013a}</Project>
+      <Name>NClang</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
       <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
       <Name>AvalonStudio.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\nclang\NClang\NClang.csproj">
-      <Project>{5AE560F9-0E8E-488E-B6C4-3C8196F9013A}</Project>
-      <Name>NClang</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
