--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="LanguageServices\CodeAnalysisResults.cs" />
     <Compile Include="LanguageServices\CodeCompletionData.cs" />
+    <Compile Include="LanguageServices\CodeCompletionResults.cs" />
     <Compile Include="LanguageServices\CPlusPlus\CPlusPlusLanguageService.cs" />
     <Compile Include="LanguageServices\Diagnostic.cs" />
     <Compile Include="LanguageServices\ILanguageService.cs" />
