--- a/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FC693E81-70BC-4972-BFA8-19D3DB8FB1CC}</ProjectGuid>
+    <ProjectGuid>{72C71854-5897-4E14-A1AE-B3B48F139AF7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvalonStudio.Toolchains</RootNamespace>
-    <AssemblyName>AvalonStudio.Toolchains</AssemblyName>
+    <RootNamespace>AvalonStudio.Toolchains.Standard</RootNamespace>
+    <AssemblyName>AvalonStudio.Toolchains.Standard</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,17 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toolchain.cs" />
+    <Compile Include="StandardToolChain.cs" />
+    <Compile Include="ToolchainSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
-      <Project>{eacbff14-438d-4311-8d8c-18e7e6769c8f}</Project>
-      <Name>AvalonStudio.Models</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
       <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
       <Name>AvalonStudio.Projects</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains\AvalonStudio.Toolchains.csproj">
+      <Project>{fc693e81-70bc-4972-bfa8-19d3db8fb1cc}</Project>
+      <Name>AvalonStudio.Toolchains</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Utils\AvalonStudio.Utils.csproj">
       <Project>{f010db06-9780-4c54-86fd-2d80e666d019}</Project>
