--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -120,6 +120,7 @@
       <HintPath>$(SharpDXPackageBinDir)\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -343,10 +344,6 @@
       <Project>{5ae560f9-0e8e-488e-b6c4-3c8196f9013a}</Project>
       <Name>NClang</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Languages.CPlusPlus\AvalonStudio.Languages.CPlusPlus.csproj">
-      <Project>{5d5fe113-ffef-4e49-a011-00a167efa36e}</Project>
-      <Name>AvalonStudio.Languages.CPlusPlus</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Languages\AvalonStudio.Languages.csproj">
       <Project>{86eba4c1-70a3-4e20-a40a-652b7d6aaadd}</Project>
       <Name>AvalonStudio.Languages</Name>
@@ -354,6 +351,10 @@
     <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
       <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
       <Name>AvalonStudio.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
+      <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
+      <Name>AvalonStudio.Projects</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
